kubernetes-dashboard-kong-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard-kong-proxy
  namespace: kubernetes-dashboard
  labels:
    app.kubernetes.io/instance: kubernetes-dashboard
    app.kubernetes.io/name: kong
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: "3.6"
    helm.sh/chart: kong-2.38.0
    enable-metrics: "true"
  annotations:
    meta.helm.sh/release-name: kubernetes-dashboard
    meta.helm.sh/release-namespace: kubernetes-dashboard
spec:
  type: NodePort  # Changed from LoadBalancer to NodePort
  selector:
    app.kubernetes.io/component: app
    app.kubernetes.io/instance: kubernetes-dashboard
    app.kubernetes.io/name: kong
  ports:
    - name: kong-proxy-tls
      protocol: TCP
      port: 443
      targetPort: 8443
      nodePort: 30444  # Specify a nodePort in the range 30000-32767
