svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{"meta.helm.sh/release-name":"kubernetes-dashboard","meta.helm.sh/release-namespace":"kubernetes-dashboard"},"creationTimestamp":"2024-11-09T02:49:37Z","labels":{"app.kubernetes.io/instance":"kubernetes-dashboard","app.kubernetes.io/managed-by":"Helm","app.kubernetes.io/name":"kong","app.kubernetes.io/version":"3.6","enable-metrics":"true","helm.sh/chart":"kong-2.38.0"},"name":"kubernetes-dashboard-kong-proxy","namespace":"kuber [...]
    meta.helm.sh/release-name: kubernetes-dashboard
    meta.helm.sh/release-namespace: kubernetes-dashboard
    metallb.universe.tf/ip-allocated-from-pool: first-pool
  creationTimestamp: "2024-11-09T02:49:37Z"
  finalizers:
  - service.kubernetes.io/load-balancer-cleanup
  labels:
    app.kubernetes.io/instance: kubernetes-dashboard
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kong
    app.kubernetes.io/version: "3.6"
    enable-metrics: "true"
    helm.sh/chart: kong-2.38.0
  name: kubernetes-dashboard-kong-proxy
  namespace: kubernetes-dashboard
  resourceVersion: "109734"
  uid: a293a8a1-f40b-42ac-8cff-6d092288727f
spec:
  allocateLoadBalancerNodePorts: true
  clusterIP: 10.43.217.241
  clusterIPs:
  - 10.43.217.241
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: kong-proxy-tls
    nodePort: 30128
    port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    app.kubernetes.io/component: app
    app.kubernetes.io/instance: kubernetes-dashboard
    app.kubernetes.io/name: kong
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 192.168.3.61
